<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".fragment.WonkasListFragment">
    <item
        android:id="@+id/reload"
        android:icon="@drawable/ic_baseline_restore_24"
        android:title="@string/reload"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filter_by_name"
                android:title="@string/filter_by_name" />
            <item
                android:id="@+id/filter_by_age"
                android:title="@string/filter_by_age" />
            <item
                android:id="@+id/filter_by_height"
                android:title="@string/filter_by_height" />
        </menu>
    </item>




</menu>